--- a/app_site/templates/app_site/home.html
+++ b/app_site/templates/app_site/home.html
@@ -1,12 +1,80 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src="img/agrologo.png">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav pl-20">
+            <a class="nav-item nav-link active text-success" href="/nutricao.html">NUTRIÇÃO <span class="sr-only">(Página atual)</span></a>
+            <a class="nav-item nav-link active text-success" href="#">LOGÍSTICA <span class="sr-only">(Página atual)</span></a>
+            <a class="nav-item nav-link active text-success" href="#">ARMAZÉM <span class="sr-only">(Página atual)</span></a>
+            <a class="nav-item nav-link active text-success" href="#">LOJA <span class="sr-only">(Página atual)</span></a>
+            <a class="nav-item nav-link active text-success" href="#">POSTO <span class="sr-only">(Página atual)</span></a>
+            <a class="nav-item nav-link active text-success" href="#">BABAÇU MANIA <span class="sr-only">(Página atual)</span></a>
+            <div class="vertical mr-3%">
+              <hr> </hr>
+              <button class="btn text-success">
+                Entrar 
+                <div class="imgconta"><img src="img/Curva (8).png" width="23" height="23"></div>
+                <svg>
+                  <path stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5" stroke="#292D32" d="M8.91016 19.9201L15.4302 13.4001C16.2002 12.6301 16.2002 11.3701 15.4302 10.6001L8.91016 4.08008"></path>
+                </svg>
+              </button>
+                <div class="vertical2 mr-17%">
+                  <hr></hr>
+                  <form class="form">
+                    <label for="search">
+                        <input required="" autocomplete="on" placeholder="Buscar" id="search" type="text" >
+                        <div class="icon">
+                            <svg stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="swap-on">
+                              <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linejoin="round" stroke-linecap="round"></path>
+                            </svg>
+                            <svg stroke-width="2" stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="swap-off">
+                              <path d="M10 19l-7-7m0 0l7-7m-7 7h18" stroke-linejoin="round" stroke-linecap="round"></path>
+                            </svg>
+                          </div>
+                          <button type="reset" class="close-btn">
+                            <svg viewBox="0 0 20 20" class="h-5 w-5" xmlns="http://www.w3.org/2000/svg">
+                              <path clip-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" fill-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                      </label>
+                </form>
+                </div>
+              </div>
+            </div>
+          </div> 
+          <!--SUBNAV-->
+          <nav class="navMenu fixed-top">
+
+            <a class="link-subnav" href="#">QUEM SOMOS</a>
+            <a class="link-subnav" href="#">SEGUIMENTOS</a>
+            <a class="link-subnav" href="#">PROEMINÊNCIA</a>
+            <a class="link-subnav" href="#">CONTATO</a>
+
+          
+            <div class="dot"></div>
+          </nav>
+        </nav>
     <h2>It's Working!!!</h2>
 </body>
 </html>
