--- a/app_site/templates/app_site/home.html
+++ b/app_site/templates/app_site/home.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="#">
-            <img src="img/agrologo.png">
+            <img src="{% static 'img/agrologo.png'%}">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
@@ -34,7 +34,7 @@
               <hr> </hr>
               <button class="btn text-success">
                 Entrar 
-                <div class="imgconta"><img src="img/Curva (8).png" width="23" height="23"></div>
+                <div class="imgconta"><img src="{% static 'img/Curva (8).png'%}" width="23" height="23"></div>
                 <svg>
                   <path stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5" stroke="#292D32" d="M8.91016 19.9201L15.4302 13.4001C16.2002 12.6301 16.2002 11.3701 15.4302 10.6001L8.91016 4.08008"></path>
                 </svg>
