Separação do CSS em subpastas

--- a/app_site/templates/app_site/home.html
+++ b/app_site/templates/app_site/home.html
@@ -9,9 +9,9 @@
 
     <link rel="icon" type="image/png" href="{% static 'img/logositeagro.png'%}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
-    <link rel="stylesheet" href="{% static 'css/body.css'%}">
-    <link rel="stylesheet" href="{% static 'css/footer.css'%}">
+    <link rel="stylesheet" href="{% static 'css/home/navbar.css'%}">
+    <link rel="stylesheet" href="{% static 'css/home/body.css'%}">
+    <link rel="stylesheet" href="{% static 'css/home/footer.css'%}">
     <link rel="stylesheet" href="{% static 'js/rascunho.js'%}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
