--- a/app_site/templates/app_site/home.html
+++ b/app_site/templates/app_site/home.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap" rel="stylesheet">
-    <title>Agronorte - Logística e Agronegócios</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -117,7 +116,7 @@
                     </div>
                   </div>
                   <div class="carousel5-item">
-                    <img class="d-block w-100" src="{% static 'img/Curva (10).png'%}" alt="Terceiro Slide">
+                    <img class="d-block w-100" src="{% static 'img/banner + logo.png'%}" alt="Terceiro Slide">
                     <div class="quemsomos3">
                       <p> 
                         A Agronorte é uma empresa com tradição no agronegócio, passada de
@@ -155,7 +154,7 @@
                 <div class="card">
                   <div class="card-details" >
                     <img src="{% static 'img/box 02.png'%}" width="275" height="180"></div>
-                    <p class="text-title"> FAZENDA</p>
+                    <p class="text-title">FAZENDA</p>
                     
                     <button class="card-button">Mais info...</button>
                   </div>
@@ -194,7 +193,7 @@
                     </div>
                   </div>
                   <div class="carousel5-item">
-                    <img class="d-block w-100" src="{% static 'img/Curva (10).png'%}" alt="Terceiro Slide">
+                    <img class="d-block w-100" src="{% static 'img/banner + logo.png'%}" alt="Terceiro Slide">
                     <div class="quemsomos3">
                       <p> 
                         A Agronorte é uma empresa com tradição no agronegócio, passada de
@@ -272,7 +271,7 @@
                       </div>
                     </div>
                     <div class="carousel5-item">
-                      <img class="d-block w-100" src="{% static 'img/Curva (10).png'%}" alt="Terceiro Slide">
+                      <img class="d-block w-100" src="{% static 'img/banner + logo.png'%}" alt="Terceiro Slide">
                       <div class="quemsomos3">
                         <p> 
                           A Agronorte é uma empresa com tradição no agronegócio, passada de
@@ -393,8 +392,8 @@
                                   <div class="slide1-content">
                                     <h3 class="slide1-title">Seguimentos...</h3>
                                     <p class="slide1-text">Quisquam quod ut quasi, vero obcaecati laudantium asperiores
-            sit amet consectetur adipisicing elit. Quaerat dignissimos commodi eos totam  corporis 
-            ad atque. Expedita fugit dicta</p>
+                              sit amet consectetur adipisicing elit. Quaerat dignissimos commodi eos totam  corporis 
+                              ad atque. Expedita fugit dicta</p>
             <button class="btn-donate3">
               Consulte mais informações
           </button>
@@ -625,7 +624,7 @@
         
         }
         </script>
-
   </body>
 </html>
+
 
