Organização - Escopo do Projeto

--- a/app_site/templates/app_site/home.html
+++ b/app_site/templates/app_site/home.html
@@ -28,14 +28,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav pl-20">
-            <a class="nav-item nav-link active text-success" href="/nutricao.html">NUTRIÇÃO <span class="sr-only">(Página atual)</span></a>
+            <a class="nav-item nav-link active text-success" href="app_site/nutricao.html">NUTRIÇÃO <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-success" href="#">LOGÍSTICA <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-success" href="#">ARMAZÉM <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-success" href="#">LOJA <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-success" href="#">POSTO <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-success" href="#">BABAÇU MANIA <span class="sr-only">(Página atual)</span></a>
             <div class="vertical mr-3%">
-              <hr> </hr>
+              <hr> </hr> 
               <button class="btn text-success">
                 Entrar 
                 <div class="imgconta"><img src="{% static 'img/Curva (8).png'%}" width="23" height="23"></div>
