--- a/static/css/home/body.css
+++ b/static/css/home/body.css
@@ -71,7 +71,7 @@
     position: absolute;
     display: flex;
     margin-top: 5%;
-    font-size: 85%;
+    font-size: 10%;
     width: 50%;
     color: #fff;
 }
@@ -235,14 +235,13 @@
     width: 960px;
     height: 300px;
     margin: 50px auto;
-    border-radius: 2%;
     overflow: hidden;
 }
   
 .slider1-controls {
     position: absolute;
     bottom: 0px;
-    left: 40%;
+    left: 75%;
     width: 100px;
     text-align: center;
     transform: translatex(-50%);
@@ -313,12 +312,12 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    width: 85%;
+    margin-left: 35%;
     height: 200%;
     color: #fff;
     opacity: 0;
     transform: translatex(-100%);
-    border-radius: 15px;
+    border-radius: 10px;
     transition: transform 250ms linear;
     font-weight: 600;
 }
@@ -483,7 +482,7 @@
 }
 
 img {
-    border-radius: 8px;
+    border-radius: 5px;
 }
 
 .card-button {
