--- a/app_site/templates/app_site/nutricao.html
+++ b/app_site/templates/app_site/nutricao.html
@@ -12,8 +12,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/nutricao/footer.css'%}">
-    <link rel="stylesheet" href="js/rascunho.js">
-    <link rel="stylesheet" href="js/rascunho.js">
+    <link rel="stylesheet" href="{% static '/js/script.js'%}">
     <link rel="stylesheet" href="{% static '/css/nutricao/navbar.css'%}">
     <link rel="stylesheet" href="{% static '/css/nutricao/body.css'%}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +31,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav pl-20">
-            <a class="nav-item nav-link active text-primary" href="templates/nutricao.html">NUTRIÇÃO <span class="sr-only">(Página atual)</span></a>
+            <a class="nav-item nav-link active text-primary" href="{% url 'nutricao' %}">NUTRIÇÃO <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-primary" href="#">LOGÍSTICA <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-primary" href="#">POSTO <span class="sr-only">(Página atual)</span></a>
             <a class="nav-item nav-link active text-primary" href="#">CONVENIÊNCIA <span class="sr-only">(Página atual)</span></a>
@@ -41,12 +40,12 @@
             <div class="vertical mr-3%">
               <hr> </hr>
               <a class="nav-link text-primary" href="#" > Conta Agronorte
-             <div class="imgconta"><img src="/img/Curva (8).png" width="25" height="25"></div></a>
+             <div class="imgconta"><img src="{% static '/img/Curva (8).png'%}" width="25" height="25"></div></a>
                 <div class="vertical2 mr-17%">
                   <hr></hr>
                   <a class="nav-item nav-link active text-primary" href="#">
                    
-                      <div class="imgbusca" ><img src="/img/Curva (9).png" width="22" height="22"></div>Buscar 
+                      <div class="imgbusca" ><img src="{% static '/img/Curva (9).png'%}" width="22" height="22"></div>Buscar 
                     <span class="sr-only">(Página atual)</span>
                   </a>
                 </div>
@@ -67,15 +66,15 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               
-              <img class="d-block w-100" src="/img/nutricao2.png" alt="Primeiro Slide" position="relative">
+              <img class="d-block w-100" src="{% static '/img/nutricao2.png'%}" alt="Primeiro Slide" position="relative">
              
             </div>
             <div class="carousel-item"> 
-              <img class="d-block w-100" src="/img/nutricao2.png" alt="Segundo Slide">
+              <img class="d-block w-100" src="{% static '/img/nutricao2.png'%}" alt="Segundo Slide">
               
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/img/nutricao3.jpg" alt="Terceiro Slide">
+              <img class="d-block w-100" src="{% static '/img/nutricao3.jpg'%}" alt="Terceiro Slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -98,8 +97,8 @@
 
         <section class="product">
           
-          <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
-            <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
+          <button class="pre-btn"><img src="{% static 'img/arrow.png' %}" alt=""></button>
+            <button class="nxt-btn"><img src="{% static 'img/arrow.png' %}" alt=""></button>
           <div class="product-container">
 
  
@@ -108,7 +107,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r1.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r1.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -122,7 +121,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r2.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r2.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -135,7 +134,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r3.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r3.png'%}" width="300px" height="400px" saclass="product-thumb">
                
               </div>
               <div class="product-info">
@@ -149,7 +148,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r5.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r5.png'%}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -163,7 +162,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/rr4.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/rr4.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -177,7 +176,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r1.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r1.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -190,7 +189,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r1.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r1.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -203,7 +202,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r1.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r1.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -216,7 +215,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
               
-                <img src="img/r1.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r1.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -229,7 +228,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                 
-                <img src="img/r1.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r1.png' %}" width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -243,7 +242,7 @@
               <button class="btn-orcamento"><h3 class="orcamento">FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                
-                <img src="img/r3.png" width="300px" height="400px" saclass="product-thumb">
+                <img src="{% static 'img/r3.png' %} " width="300px" height="400px" saclass="product-thumb">
                 
               </div>
               <div class="product-info">
@@ -257,10 +256,10 @@
         </section>
 
         <div class="outdoor-nutricao">
-          <img src="img/pagina.png" alt="1">
+          <img src="{% static 'img/pagina.png' %}" alt="1">
         </div>
         
-        <script src="/js/nutricao/script.js"></script>
+        <script src="{% static '/js/nutricao/script.js' %}"></script>
 
         <br><br>
         
@@ -269,16 +268,16 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-depoimentos">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/depo1.png" alt="First slide">
+              <img class="d-block w-100" src="{% static 'img/depo1.png' %^}" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/depo2.png" alt="Second slide">
+              <img class="d-block w-100" src="{% static 'img/depo2.png' %}" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/depo3.png" alt="Third slide">
+              <img class="d-block w-100" src="{% static 'img/depo3.png' %}" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/depo4.png" alt="Third slide">
+              <img class="d-block w-100" src="{% static 'img/depo4.png' %}" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -303,7 +302,7 @@
           <div class="larg-3 ">
             <div class="imgagro">
               <a href="nutricao.html">
-                <img src="/img/logofooter.png" width="300" height="47">
+                <img src="{ % static '/img/logofooter.png' %}" width="300" height="47">
               </a>
               <div class="subtitle"><h6>Sempre ao lado de quem produz.</h6>
               </div>
