commit do projeto

--- a/app_site/templates/app_site/nutricao.html
+++ b/app_site/templates/app_site/nutricao.html
@@ -232,7 +232,7 @@
                 
               </div>
               <div class="product-info">
-                <h2 class="product-brand">LINHA AVES RESULT</h2>
+                <h2 class="product-brand">LINHA AVES</h2>
                 
               </div>
             </div>
