--- a/app_site/templates/app_site/nutricao.html
+++ b/app_site/templates/app_site/nutricao.html
@@ -239,7 +239,7 @@
   
 
             <div class="product-card">
-              <button class="btn-orcamento"><h3 class="orcamento"> ORÇAMENTO</h3></button>
+              <button class="btn-orcamento"><h3 class="orcamento"> FAZER ORÇAMENTO</h3></button>
               <div class="product-image">
                
                 <img src="{% static 'img/r3.png' %} " width="300px" height="400px" saclass="product-thumb">
